terraform_code/security.tf
# EKS Cluster SG
resource "aws_security_group" "eks_cluster_sg" {
  name        = "eks-cluster-sg"
  description = "Cluster communication"
  vpc_id      = aws_vpc.eks_vpc.id

  ingress {
    description = "Allow worker nodes"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    self        = true
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Worker Node SG
resource "aws_security_group" "worker_sg" {
  name   = "eks-worker-sg"
  vpc_id = aws_vpc.eks_vpc.id

  ingress {
    from_port       = 1025
    to_port         = 65535
    protocol        = "tcp"
    security_groups = [aws_security_group.eks_cluster_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
  description = "Allow HTTP access to app on port 7007"
  from_port   = 7007
  to_port     = 7007
  protocol    = "tcp"
  cidr_blocks = ["0.0.0.0/0"]   # open to internet (use specific IP for security)
}
}
